# QuantumAlgorithmsLab

./: Adiabatic _state_preparation.ipynb  DJA_with_error.ipynb  README.md  pyproject.toml
src/quantum_algorithms/: adiabatic.py
