

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_algorithms"
version = "0.1.0"
description = "Quantum algorithm simulations"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "qutip",
] 

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["quantum_algorithms"]
package-dir = {"" = "src"}

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/quantum_algorithms/__init__.py",
]